--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,18 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".widget_1" />
-        <activity android:name=".widget_2" />
+        <activity android:name=".widget_2">
+
+        </activity>
         <activity android:name=".widget_3"></activity>
-        <activity android:name=".widget_4">
+        <activity android:name=".widget_4" />
+        <activity android:name=".widget_5">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".widget_5"></activity>
     </application>
 
 </manifest>
